<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgramacionRutas">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="380dp"
        android:layout_height="189dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="240dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/table_salida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/table_salida"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_servicio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/table_servicio"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_precio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/table_precio"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_select"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phora"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_hora"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pservicio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_bus"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pprecio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_precio"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_elegir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="Seleccionar"
                android:text="@string/botton_elegir" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="73dp">

            <TextView
                android:id="@+id/phora2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_hora2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pbus2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_bus2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pprecio2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_precio2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_elegir2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:onClick="Seleccionar"
                android:text="@string/botton_elegir2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="73dp">

            <TextView
                android:id="@+id/phora3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_hora2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pbus3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_bus2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pprecio3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p_precio2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_elegir3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:onClick="Seleccionar"
                android:text="@string/botton_elegir2" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="363dp"
        android:layout_height="113dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textida"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_origen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_origen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_text_origen"
                android:inputType="text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textdestino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_destino"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_destino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_text_destino"
                android:inputType="text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_ida"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_ida"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_fecha_ida"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_text_fechaida"
                android:inputType="text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Anterior"
                android:text="@string/botton_volver_buscar" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="127dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/title_salidas"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/title_salida"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>