<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="309dp"
        android:layout_height="62dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="57dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloSeccionRutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/text_titulo"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="335dp"
        android:layout_height="295dp"
        android:layout_marginBottom="236dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/origen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center|center_vertical"
            android:hint="@string/hint_origen"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:ems="10"
            android:hint="@string/hint_destino"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/fechaida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:ems="10"
            android:hint="@string/hint_fechaida"
            android:inputType="date"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/fechavuelta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:ems="10"
            android:hint="@string/hint_fechavuelta"
            android:inputType="date"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buscarruta"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:onClick="siguienteYVerRutas"
            android:text="@string/boton_buscar"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>